force-app/main/default/objects/Activity/fields/Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Reschedule__c</fullName>
    <formula>IF(ISPICKVAL(Appointment_results__c , &quot;Reschedule&quot;) || ISPICKVAL(Appointment_results__c , &quot;Reset&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reschedule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>