force-app/main/default/objects/Activity/fields/Sale_completed__c.field-meta.xml
<CustomField>
    <fullName>Sale_completed__c</fullName>
    <formula>IF(ISPICKVAL(Appointment_results__c , &quot;Completed&quot;) || ISPICKVAL(Appointment_results__c , &quot;Partial&quot;) || ISPICKVAL(Appointment_results__c , &quot;Sale Cancelled&quot;) || ISPICKVAL(Appointment_results__c , &quot;Sale Approved&quot;) || ISPICKVAL(Appointment_results__c , &quot;Pending Cancel&quot;) || ISPICKVAL(Appointment_results__c , &quot;Sale Pending&quot;), 1, 0)</formula>
    <label>Sale completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>