force-app/main/default/objects/Activity/fields/Sale_Turn_Down__c.field-meta.xml
<CustomField>
    <fullName>Sale_Turn_Down__c</fullName>
    <formula>IF(ISPICKVAL(Appointment_results__c , &quot;Sale Turn Down&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Turn Down</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>