force-app/main/default/objects/Activity/fields/SalesRabbit_Status__c.field-meta.xml
<CustomField>
    <fullName>SalesRabbit_Status__c</fullName>
    <label>SalesRabbit Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>