force-app/main/default/objects/Activity/fields/Sold__c.field-meta.xml
<CustomField>
    <fullName>Sold__c</fullName>
    <formula>Sale_completed__c  -  Sale_Turn_Down__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>