force-app/main/default/objects/Activity/fields/User_Rep__c.field-meta.xml
<CustomField>
    <fullName>User_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities_User</relationshipName>
    <type>Lookup</type>
</CustomField>