force-app/main/default/objects/Activity/fields/Web_Form__c.field-meta.xml
<CustomField>
    <fullName>Web_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Web Form</label>
    <referenceTo>webForm__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>