force-app/main/default/objects/Activity/fields/X1_leg__c.field-meta.xml
<CustomField>
    <fullName>X1_leg__c</fullName>
    <formula>IF(ISPICKVAL(Appointment_results__c , &quot;1 Leg&quot;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1 leg</label>
    <type>Checkbox</type>
</CustomField>