force-app/main/default/objects/Activity/listViews/Out_for_Bid.listView-meta.xml
<ListView>
    <fullName>Out_for_Bid</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>Appointment_results__c</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appointment_results__c</field>
        <operation>equals</operation>
        <value>Quote</value>
    </filters>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event.Sales</value>
    </filters>
    <label>Out for Bid</label>
</ListView>